# bot_base

./: .gitignore  .gitmodules  README.md
bot_base/: CMakeLists.txt  package.xml
bot_base/launch/: base.launch.py
bot_base/urdf/: bot_base.urdf.xacro  chassis.urdf.xacro  globals.urdf.xacro  sonar.urdf.xacro  wheels.urdf.xacro
bot_description/: CMakeLists.txt  package.xml
bot_description/urdf/: bot.urdf.xacro  wheels.urdf.xacro
bot_differential_drive/: CMakeLists.txt  package.xml
bot_differential_drive/config/: controller.yaml  interface_description.xacro
bot_differential_drive/description/: bot_differential_drive.ros2_control.xacro  bot_differential_drive.urdf.xacro  bot_differential_drive.xml
bot_differential_drive/launch/: low_level.launch.py
bot_differential_drive/src/: DifferentialDriveMock.cpp  DifferentialDriveMock.h  DifferentialDriveSerialInterface.cpp  DifferentialDriveSerialInterface.h  SerialPort.cpp  SerialPort.hpp  SerialProtocol.cpp  SerialProtocol.h  visibility_control.h
bot_differential_drive/test/: test_control.cpp  test_query.cpp  test_serial.cpp
robopi_low_level/: CMakeLists.txt
robopi_low_level/src/: SerialPort.cpp  SerialPort.hpp  SerialProtocol.h
robopi_low_level/test/: test_serial.cpp
