<?xml version="1.0"?>
<package format="2">
  <name>bot_base</name>
  <version>0.0.0</version>
  <description>The bot_base package</description>

  <maintainer email="phil@todo.todo">phil</maintainer>

  <license>TODO</license>


  <buildtool_depend>ament_cmake</buildtool_depend>
  <depend> bot_differential_drive</depend>
  <exec_depend>xacro</exec_depend>
</package>
